Preparation for December 2013 newsletter.

--- a/pnsac/newsletter/article_Feature1.tex
+++ b/pnsac/newsletter/article_Feature1.tex
@@ -5,107 +5,82 @@
 % Head
 
 \title{My Days at the Home of the Merlin Engine}
-\subtitle{Part 3}
+\subtitle{Part 4}
 \author{Richard Lodge}
 
 \maketitle
 
-``Lodge, the expenses on the charity wagon go to Miss Prod''. What was a
-charity wagon and who was Miss Prod? I was working in the Overheads
-Department of the Rolls-Royce Aero Engine Division in Derby. As a
-young, ambitious accountant, I did not want to admit to the people in
-the department that I did not know what they were talking about. I was
-conscious that I had spent several weeks of initiation under the
-guidance of the old timer, Les Hart, and should now know something
-about the company. I was sitting in front of a huge leather bound
-ledger where accounting information was recorded. Eventually, by
-listening to other people talking around me, I established that a
-charity wagon was a much prized company car and that Miss Prod was not
-a person but referred to ``miscellaneous production'' work at R-R. Put
-in plain English, the sentence meant that the cost of repairing this
-individual's car was to be charged to a special account in the
-miscellaneous production section of the overheads. There was so much
-to learn!  I was completely bewildered. Each day was a challenge and
-the thought that aero engines were produced in the surrounding
-factories seemed very far away.
+One of the most mysterious departments at Rolls-Royce was the
+Technical Publications Department. Word processing was unheard of in
+the 1960s and every time an engine modification was made, it resulted
+in much work documenting even a small change and distributing the
+updated documentation to all engine users around the world. I never
+spent any time working with the people in this department even though
+there was a complete building devoted to the work. Compared with the
+resources allocated to engine development, the technical publication
+side of the business was very small and it always remained a mystery
+to me.
 
-On being placed in the Overheads Department, I was given an internal
-mail address. The company was so large that a worldwide internal mail
-system had been established and I rapidly found out that I was at the
-bottom of the heap. My address was JD/JS/LOD which meant that JS was
-my immediate supervisor and JD was his boss. If you were important in
-the company, your mail would come to you with just your initials such
-as JD. Everybody with any ambition wanted to get a single initials
-mailing address. If you were really close to God, such as a director
-of the company, your mailing address would be Psn for the CEO, Sir
-Denning Pearson, or DPH for David Huddie, the Director of Engineering.
+Since retiring from my career as an accountant in Canada, I have
+become active on the actual restoration work of the North
+Star. Understandably, I have a special interest in working on the
+Merlin engines. Nobody now working on the restoration has ever worked
+on a Merlin when it was in service. It is therefore necessary at all
+times to refer to the various publications and manuals we have managed
+to accumulate for the North Star.
 
-There were continuous battles between the engine development engineers
-and the accountants. When the engineers spent money, they tried
-wherever possible to avoid having it charged against their
-budget. Their favourite game was to charge the cost into the overheads
-where it would be lost in a mass of other expenditure such as emery
-paper and toilet rolls. Our task was to catch them at their game and
-reallocate the expense back to them. The development engineers were
-very skilled at this part of their work and became so good at it that
-they were able to hide major cost overruns, sometimes
-indefinitely. Little did I realize that I was helping to perpetuate
-the culture that was one of the causes of R-R going bust a few years
-later.
+It is only now, actually working on the engine and referring
+frequently to the exploded diagrams that I realize how complicated the
+work of the Technical Publications Department must have been. The men
+and women who worked there were largely unsung heroes in that it was
+very tedious and unglamorous work which was of great importance for
+the safe and trouble-free running of engines in service. I can
+remember that I would hear from time to time of the difficulties of
+ensuring that publication updates were actually delivered to many
+remote places in the world and the considerable logistical
+complications of ensuring that the packages arrived safely and
+furthermore that the updates were actually inserted in the relevant
+manuals, particularly as many of the engine users did not speak
+English. I cannot remember now if any of the documentation was
+translated into other languages although I have a recollection that we
+employed people who could translate into French and Spanish.
 
-In the 1960s R-R was a paternalistic organization, steeped in
-tradition, still operating with many cost-plus government contracts,
-vast amounts of paper and virtually no computers. The Ministry of
-Aviation would regularly send auditors into the company to check how
-public money was being spent. These gentlemen had a permanent office
-allocated to them and would regularly attack the expenses recorded by
-the Overheads Department. When this happened, we and the development
-engineers became great buddies for a short time. Our unspoken job was
-to confuse the government auditors as much as possible so that they
-would not report back to their masters that things were not as they
-should be. We became quite good at our confusion duties. It was not a
-difficult job because we were frequently confused by all the paper and
-numbers as well.
+After a couple of years I was given a new job in the Long Range
+Planning Department. I was one of three accountants working in this
+office under a very senior accountant. Here we looked at the costings
+of the development work, the projected sales  and production costs on
+new engine designs. This was the time when the Spey was going into
+service and the the company had signed a fixed price contract for the
+RB211 engines for the new Lockheed 1011. This was a major project,
+championed by David Huddie the Chief Engineer. Computer spreadsheets
+did not exist at that time - pencil and columnar paper were the order
+of the day, together with efficient erasers. Long range forecasts of
+25 years required many yearly columns and each time we produced
+figures that the engineers did not like, we were told to rework the
+numbers until we produced an acceptable answer. We were not limited in
+the number of erasers we could use. The usual way of cutting costs was
+to reduce the forecast development and testing time. Of course this
+did not work in real life.
 
-R-R continued to deliver new aero engines to customers and I gradually
-started to understand what I was doing. After a few months, my
-supervisor was promoted and I was appointed supervisor of the
-Overheads Department, much to the disgust of many of the people in the
-department. Although my pleasure was to be short-lived, I was
-delighted to get this promotion. By the time of my promotion, I had
-been around many of the facilities of R-R both in the Derby area and
-in Scotland. I felt that I knew my way around the company.
+We were often dealing with the directors of R-R who lived on the top
+floor of the Nightingale Road offices. Many of them were engineers and
+they had little time for young bean counters. It was still a time of
+optimism for the company. The huge contract for the Lockheed engines
+had been signed and the company was still enjoying its reputation as
+the company whose Merlin engines had saved Britain in the air
+war. This was in 1965/6 and it was several years before our
+projections of doom resulted in the bankruptcy of the
+company. Fortunately I left the company in 1966 and was not involved
+in what must have been a horrible process as a symbol of British
+engineering excellence slowly went to the wall. 
 
-Almost everyone working in the Overheads Department, including the
-three section leaders under me, were older and more experienced than
-I. They did not like this young upstart accountant becoming their
-boss. Underground warfare started between us. Several of the men had
-fought through WW2 and were well practiced at the gentle art of ``dumb
-insolence''. The three section leaders came to me one day and told me
-they really disliked me being their boss. This was not good for my
-ego. I suggested to them that the four of us should go out after work
-and have a beer and that on this occasion I would just be one of them
-and not their boss. I bought the first round of beer and they really
-tore into me. After several more rounds of beer, we agreed to a truce
-and decided on a new strategy. I would stop trying to micromanage them
-and they would stop their dumb insolence. Of course, they never
-admitted that they were practicing dumb insolence. Life became much
-better after our beers. Miss Prods, charity wagons, drop-offs and all
-the other R-R jargon became normal for me with the active co-operation
-of my three section leaders.
-
-Apart from the pay rise upon my promotion I had now moved up in the
-company mailing system and my address had become JD/LOD. This probably
-helped my head to swell until the three section leaders brought me
-rapidly back to earth.
-
-I must have learnt a few of life's lessons about people management
-because when I was again promoted, my three section leaders tried to
-encourage me to refuse the promotion. No chance. I was once again
-moving up the mailing system and would in future have my mail
-addressed to LOD, without a more senior person's initials appearing
-before mine. I was going in the right direction.
-
+After the chaos caused by the demise of Rolls-Royce Limited, the
+British government formed a new nationalized company to take over the
+remains of the old one. This has been very much a success story and
+the newly privatized Rolls-Royce is now a highly profitable and
+innovative company. I look back on my days at R-R with nostalgia but I
+now realize that much of the time we were all living in a fool's
+paradise.
 
 
 \begin{footnotesize}
