--- a/pnsac/newsletter/article_ForthEvents.tex
+++ b/pnsac/newsletter/article_ForthEvents.tex
@@ -15,13 +15,15 @@
 % {\normalfont\color{red}Annual General Meeting}\\
 %June 8, 2013      \> Board of Directors' Meeting (post AGM)\\
 %June 27, 2013     \> Board of Directors' Meeting (first meeting of new Board)\\
-November 28, 2013     \hspace{20mm}\= Board of Directors' Meeting (to be confirmed)\\
-December 7, 2013       \> Members' Quarterly Meeting (to be confirmed)\\
-March 20, 2014         \> Board of Directors' Meeting (to be confirmed)\\
-March 29, 2014         \> Members' Quarterly Meeting (to be confirmed)
-
+March 20, 2014    \hspace{20mm}\= Board of Directors' Meeting (to be
+confirmed)\\
+{\normalfont\color{red}April 12, 2014}    \>{\normalfont\color{red}Members' Quarterly Meeting -- Vintage Wings of Canada}
 
 \end{tabbing}
+
+\noindent \textbf{Note}: The next Quarterly meeting will be held in the boardroom of
+{\normalfont\color{blue}\texttt{\href{https://http://www.vintagewings.ca/}{Vintage
+      Wings of Canada }}} at 10:00 AM on April 12, 2014.  A hangar tour will follow the meeting. 
 
 \begin{multicols}{2}
 
