--- a/pnsac/newsletter/article_ProgReport.tex
+++ b/pnsac/newsletter/article_ProgReport.tex
@@ -5,7 +5,7 @@
 % Head
 
 \title{Project Manager's Progress Report}
-\subtitle{October 2013}
+\subtitle{December 2013}
 \author{Bruce Gemmill}
 
 \maketitle
@@ -13,90 +13,74 @@
 \section{Nr 3 Engine}
 \label{sec:engines_3}
 
-Engine 3 is almost completely reassembled, with only the supercharger
-and intercooler preheat assemblies left to install on the engine,
-which was moved to the QEC engine frame in early summer.  The work has
-slowed somewhat, due to summer down time for staff and volunteers, but
-we continue to make steady progress.
-
-The auxiliary gearbox was recently removed from the engine firewall,
-and is now being disassembled.  This is the last major assembly that
-must be overhauled before the engine can be installed on the aircraft.
-
-\section{Engine Frame}
-\label{engineframe}
-
-Now that the engine and frame are joined, the major work still
-required is rebuilding the many cowl panels and the radiator flaps
-that surround the engine.  There is a lot of corrosion on the pieces,
-and each must be disassembled, cleaned, then repaired before painting
-and reassembly.  This work must be done carefully to ensure the cowl
-panels fit properly when installed on the QEC.
-
-This work has gone slowly due to the small number of volunteers who
-are able to do this type of repair.
-
-
-\section{Crew Lounge, Galley,  and Forward Washroom}
-\label{crewlounge}
-
-The new galley has now been installed in the crew lounge, and work
-overhead in the ceiling is also complete.  This involved installing
-new insulation and the Janitrol heaters, along with refurbished
-heating ducts, and some new fuel lines.  The ceiling panels were also
-installed.
-
-The doors on the main electrical panel were restored and installed.
-New circuit legend cards were produced to indicate the circuit breaker
-and junction box connections.  These were laminated and installed
-inside the electrical panels.  Some additional investigation is needed
-to complete the electrical circuit connection diagrams that were badly
-faded.
+Engine 3 is nearing completion.  The supercharger and intercooler
+preheat assemblies have been installed, along with the propeller
+reduction gearbox.  While this work was being carried out by the
+engine crew, the remainder of the volunteer work force busied
+themselves completing the numerous cowl panels, pipes and hoses and
+other pieces needed to complete the engine.  Two items that seemed to
+take forever were the large steel exhaust shrouds.  A lot of hammering
+was needed to pound out years of dents, then numerous rivets and all
+the Dzus fasteners and springs needed to be replaced.  The complex
+shape of the exhaust shroud made this challenging work.  Further
+delaying completion was the search for suitable clear coat to protect
+the steel from corrosion.  The old clearcoat we used successfully on
+engines 1 and 2 is no longer available.  Mike Irvin finally located a
+suitable replacement, and the shrouds were clear coated and serial
+numbers were stencilled on.
 
 \begin{figure}[htbp]
    \vspace{2em}
    \centering
    %name of the graphic, without the path AND in EPS format:
-   \includegraphics[scale=0.5]{galley_interior.eps}
+   \includegraphics[scale=0.5]{Eng3Intercooler.eps}
    %caption of the figure 
-   \caption*{\small \em New galley complete.}
+   \caption*{\small \em Garry installing the intercooler on engine 3.}
    %label of the figure, which has to correspond to \ref{}:
-   \label{fig:galley_interior}
+   \label{fig:Eng3Intercooler}
 \end{figure}
 
-One section of floor was patched after removing a corroded area.  One
-additional repair needs to be done under the floor of the crew lounge.
-Until this is complete, the new cushion flooring cannot be
-installed. This has also delayed the installation of all of the crew
-lounge accessories, such as the table, seats and secure storage bin,
-all of which are complete but waiting in storage.
+The auxiliary gearbox was disassembled, and significant corrosion was
+found on the bearings inside.  Bearings had to be ordered from
+England.  Meanwhile, the gearbox was cleaned and painted.  At the same
+time, the large DC generator was dismantled, repainted and
+reassembled, as well as the air pump and the tachometer generator and
+propeller synchronizer.  Once the new bearings were installed, the
+gearbox was completed and the generator and air pump were attached.
+Finally, the gearbox was installed on the firewall, which is now
+finished, awaiting the installation of engine \#3.
 
+
+\section{Crew Lounge, Galley,  and Forward Washroom}
+\label{crewlounge}
+
+Work has slowed on the forward section of the aircraft.  The repair
+needed under the floor of the crew lounge is on hold until a suitable
+piece of extruded aluminum can be found.  Until this is complete, the
+new cushion flooring cannot be installed. This has also delayed the
+installation of all of the crew lounge accessories, such as the table,
+seats and secure storage bin, all of which are complete but waiting in
+storage.
 
 \section{Fuselage and Empennage}
 \label{empenage}
 
-The forward and rear belly compartments are now complete.  The two
-battery elevators that were removed have been restored and installed
-behind the nose wheel.  The battery compartment covers were repaired
-but need painting and stencilling.
-
-The firewall on nacelle 3 is being cleaned in preparation for the
-installation of the engine sometime this winter.
-
-Further progress has been made on the set of troop seats being
-fabricated for the main cabin.
-
+The forward and rear belly compartments are now complete.  All the
+frame pieces and hardware needed for the troop seats have been made,
+and work is progressing on the seats and backs.  One section has
+undergone a trial fit, and all pieces seem to fit perfectly.
 
 \section{Planned Restoration Work 2013/14}
 \label{sec:plannedwork}
 
-Over the next year, we hope to have engine Nr 3 completed and engine
-Nr 4 removed.  We will complete the reassembly of the crew lounge and
-galley.  We then plan to work on the main cargo compartment, including
-refurbishing the main heater duct and other fittings, and removing
-floors to begin cleaning and repairs under the cargo floor.  We may
-yet get to work on the four engine nacelles.
-
+The museum has advised all North Star volunteers that our work must be
+put on hold for several months while a major exhibit for the 100th
+anniversary of the beginning of the First World War is prepared.  Our
+work space in the restoration hangar is needed to assemble and prepare
+several aircraft that will be added to the display space in March.
+Until then our work on the aircraft is suspended, but we don't expect
+this delay to have a serious impact on the overall project.  We look
+forward to resuming work in the Spring.
 
 
 \begin{footnotesize}
