--- a/pnsac/newsletter/article_Feature2.tex
+++ b/pnsac/newsletter/article_Feature2.tex
@@ -4,96 +4,138 @@
 
 % Head
 
-\title{Building troop seats for North Star 17515}
-
-\author{Rolf Geiger}
+\title{RCAF Overseas Ferry Operations}
+\author{AJS (Tim) Timmins, RAD/NAV/AI}
 
 \maketitle
 
-
-
-There are no original parts or drawings for the seats. Fortunately,
-the tubing and brackets that connect the seats to the aircraft wall
-were still in place in the aircraft. Also, two lower tubing support
-brackets were found, allowing us to produce exact copies of the
-original. Everything else concerning the seats is missing and needs to
-be replaced.
-
-\end{multicols}
-
-%\begin{figure*}[htbp]
-\begin{figure*}[h]
-   \vspace{2em}
-   \centering
-   %name of the graphic, without the path AND in EPS format:
-   \includegraphics[scale=0.75]{ass.eps}
-   %caption of the figure 
-   \caption*{\small \em Troop seat construction detail.}
-   %label of the figure, which has to correspond to \ref{}:
-   \label{fig:ass}
-\end{figure*}
-
-\begin{multicols}{2}
-
-To find the size and the number of seats to be produced we measured
-the space between the anchoring studs in the aircraft floor, which the
-legs snap onto. This gave us the width of the seats. Thus, we will
-produce (5) three-seaters plus (6) four-seaters, providing seating for
-39 troops. No litters are planned.
-
-Mike Irvin (our Museum coordinator) decided to use seats from a
-helicopter in the Museum collection as an example for our seats. We
-are more or less copying the parts of these seats, considering that we
-have to adapt our methods to the equipment available to us. 
-
-To start the project, drawings of the parts were made. The list of
-materials of these parts calls mainly for aluminum bar stock, aluminum
-tubing, steel tubing, aluminum sheet and steel sheet. 
+Over a three year period starting in 1952, with Operation Leap Frog,
+the deployment of 12 Sabre squadrons from Canada to Air Division in
+Europe, No 1 Overseas Ferry Unit (1OFU), based at St Hubert, Quebec,
+delivered over 800 aircraft. 426 Squadron North Stars flew support
+missions, carrying servicing personnel and providing enroute
+navigation assistance, airborne radio beacons known as duck
+butts. Besides the Sabre squadrons, four CF100 Squadrons were
+delivered to Air Division and 53 CF100 aircraft to the Belgium Air
+Force. Silver Stars and Expeditors were flown to Europe for delivery
+to NATO members under the Mutual Aid agreement. My personal experience
+with ferry operations was with Beechflight, the delivery of 25 C45s
+(Expeditors) to France and Portugal.
 
 \begin{figure}[htbp]
    \vspace{2em}
    \centering
    %name of the graphic, without the path AND in EPS format:
-   \includegraphics[scale=0.5]{rolf.eps}
+   \includegraphics[scale=0.5]{rcaf_c45.eps}
    %caption of the figure 
-   \caption*{\small \em Rolf Geiger at work on the troop seats.}
+   \caption*{\small \em RCAF C45 Expeditor a military variant of the Beech 18.Purchased in large numbers during WW II and after for pilot training, navigator training, and as a utility transport.}
    %label of the figure, which has to correspond to \ref{}:
-   \label{fig:rolf}
+   \label{fig:rcaf_c45}
 \end{figure}
 
-Thus, we need to produce (15) different metal parts, including: lower
-tubing plus support brackets and clamps, spreader bars with two shell
-clamps each to clamp onto the lower support tubing plus the front
-brackets holding the spreader bars to the frontal support tubes, leg
-brackets connecting the legs to the frontal support tubes plus
-secondary brackets (slipping over the leg brackets) holding a spring
-loaded pin with which the seat fabric will be tautened, legs,
-including the lower clamping mechanism fastening the legs to the
-floor. Most parts need (22) of each, except the shell clamps for the
-spreader bars (44), hooks (117), leg grippers (44).
-  
-The procedure in the production of these parts is as with any project:
-Take the finished product and then work backwards to determine the
-production stages.
+Beachflight was a Training Command operation, under the command of
+Wing Commander Harry Forbell. Twenty six expeditors were assembled at
+Trenton where they were fitted with a 100 gallon fuel tank in the main
+cabin, plus safety and navigation gear required for the planned
+route. A pilot and navigator were assigned to each aircraft. I flew
+with Squadron Leader Brian, Marfleet, the designated Deputy Operation
+Commander. The aircraft were to fly in formation, four sections of
+five and one of six, within block airspace. 
 
-In the case of a formed sheet metal part a drawing of a flattened
-blank is produced by calculating bend radii and adding that to the
-straight surfaces (in effect un-bending or stretching the finished
-part).  
+On 20 May 1959 Operation Beachflight was launched. Sections departed
+Trenton for Goose Bay at designated intervals in order to maintain
+separation along the route. Big trouble, the weather within the
+assigned block airspace deteriorated to the point where aircraft could
+not maintain contact with each other and abandoned their
+formations. Now it was everybody for himself. The 26 Expeditors were
+up, down, right, left, within the block airspace and no doubt outside
+it. My section dispersed and we did not see any of them until we
+arrived at Goose Bay. Not a great start to the operation, but everyone
+arrived safely at Goose Bay, so a success in that sense. Our flight
+time was 6:45.
 
-Experimental operations may be needed to find the shape and dimensions
-of the blanks.  Tooling may be needed to produce the formed sheet
-metal parts.  The blanks are made by shearing and sawing, according
-to the parts drawing.
+The flight from Goose Bay to Frobisher (Iqualuit) the next day was
+uneventful. Our Flight time was 6:05.
 
-In the case of a machined part, it is usually produced from bar stock:
-Parts are cut to length and subsequently machined as per
-drawing. Partial in-between drawings may be necessary to produce the
-parts in progressive stages.
+As I recall, we had a weather delay in Frobisher and did not depart
+until 24 May. The plan was for each section to proceed to Sondrestrom
+AFB (Kangerlussuag-big Fjord) located on the West coat of Greenland,
+refuel and carry on over the icecap to Keflavik. The Deputy Commander
+would lead the 5th and last section. Our aircraft was unserviceable so
+we had to take the spare, the 26th aircraft. The unserviceable
+aircraft was repaired and returned to Trenton. We were late into
+Sondrestrom, to find that section four was still on the ground because
+the three earlier sections had experienced heavy icing over the ice
+cap.  It was not known if the crews and aircraft were safe, a great
+concern as the Expeditor was a notoriously poor performer in icing
+conditions. We assembled in the bar to await word on the fate of our
+mates. All the aircraft made it over the ice cap and arrived safely in
+Keflavik, which was ample reason for us to celebrate another
+success. Our flight time to Sondrestrom was 3:50.
 
-To avoid the higher costs associated with surface plating the metal
-parts, (as per original parts) we chose painting them instead, which
-will be acceptable given the limited use of the finished product.
+We departed Sondrestrom on 27 May after a two day delay waiting for
+improved weather over the ice cap. The flight to Keflavik was
+uneventful. Our flight time was 5:10.
+
+The first three sections waited for us in Keflavik. Every crew had a
+story to tell about their experience over the ice cap. Fifteen
+aircraft were loaded with ice and unable to maintain altitude. Their
+only salvation was to make it past the ice cap and out over the water
+where they could descend to warmer air and shed the ice. Thankfully,
+all of them did.
+
+The east coast of Greenland is very rugged with numerous high
+peaks. Several crews in their descent out of the icing conditions
+broke cloud between these peaks. These stories were oft repeated and
+all called for another round of drinks. 
+
+The next day, 28 May, all the sections proceeded to Prestwick. The
+weather was perfect and I got a lot of stick time because my pilot was
+very tired after the debriefings in Keflavik. Our flight time was
+5:10.
+
+We remained overnight in Prestwick and flew to 1 Wing, Marville,
+arriving mid afternoon on 29 May.  The aircraft were prepared for
+delivery to the French and Portugese air forces. The cabin fuel tanks
+were removed as well as all the safety and navigation gear.
+ 
+On 3 June we delivered 19 Expeditors to the French Air Force at
+Chateaudun, located not far from Chartres. The flight crews were
+picked up by C47 Dakotas and returned to Marville. Nineteen crews
+boarded a 426 Squadron North Star for return to Trenton. Of course the
+Commander and his Deputy remained behind to deliver six expeditors to
+the Portugese Air Force in Lisbon.
+
+We departed Marville on 4 June for Bordeaux where we planned to refuel
+and then proceed along an air route over the Pyrenees Mountains to
+Lisbon. The weather along the planned route was very bad with
+intensive thunder storms over the mountains. Ever resourceful, our
+Commander decided to file a flight plan west over the Bay of Biscay,
+clear of Spain, then south to Lisbon. This would be a long overwater
+flight and we had no extra fuel, safety equipment or nav gear. We took
+off and were in the process of forming up in two sections of three,
+when several light military aircraft flew through our formation. No
+one saw them coming, it happened so fast there was no reaction. Not a
+very good start to the day.
+
+Our Commander led us west over the Bay of Biscay, maintaining VFR
+under a cloud layer. The cloud  base got lower and lower, we were down
+with the shipping and it was decided to climb above the cloud, VFR on
+top. This worked for a while but the cloud tops kept creeping up over
+10,000 feet and we had no oxygen. The Commander decided to descend and
+try for better conditions. The Deputy Commander, my pilot, decided to
+stay high; our six plane formation was split three high and three
+low. I was now doing the navigation for the high section. With nothing
+but a chart to work with, I managed to make use of the marine beacons
+along the coast to guide us west then south to Lisbon. We arrived at
+Lisbon before the low section and the Deputy Commander wisely elected
+to hold until the Commander arrived and landed. Our flight time was
+5:45.
+
+The next day we participated in a small handing over ceremony. Mission
+accomplished!
+
+
 
 \begin{footnotesize}
     \raggedleft PNSAC\\
