--- a/pnsac/newsletter/main_document.tex
+++ b/pnsac/newsletter/main_document.tex
@@ -56,6 +56,14 @@
 \date{October 2013} 
 \titlepage
 
+% Editor's notes
+% ..................................................... %
+
+% Report
+\begin{article}
+	\input{article_EditorsNotes} 
+\end{article}
+
 
 % President's report ................................................. %
 
@@ -99,9 +107,9 @@
 %\pagebreak
 
 % Feature article
-% \begin{article}
-% 	\input{article_Feature3} 
-% \end{article}
+\begin{article}
+	\input{article_Feature3} 
+\end{article}
 
 %\pagebreak
 
@@ -137,9 +145,9 @@
 \end{article}
 
 % Special article 
-\begin{article}
-	\input{article_Special} 
-\end{article}
+% \begin{article}
+% 	\input{article_Special} 
+% \end{article}
 
 %\pagebreak
 
